<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/normal_bg"

    android:orientation="vertical">

    <LinearLayout xmlns:font="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <reign.com.kotlindialogsapps.CustomFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="About Us"
            android:textColor="@color/black"
            android:textSize="20sp"
            font:customFont="@string/font_gothic_bold" />

        <reign.com.kotlindialogsapps.CustomFont
            android:id="@+id/aboutUsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:gravity="fill"
            android:text="@string/about_us"
            android:padding="10dp"

            font:customFont="@string/font_gothic" />

    </LinearLayout>
</ScrollView>